<resources>
    <string name="app_name">Music Player</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_grant">Grant</string>
    <string name="action_settings">Settings</string>
    <string name="wait">Waiting you to give us permission to access files</string>
    <string name="open_setting">Open setting and give us permission</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="music_image">music Image</string>
    <string name="file_length">10:50:00</string>
    <string name="elapsed_time">00:00:00</string>
    <string name="file_name_artist">FileName | Artist</string>
    <string name="mute_sound">mute sound</string>
    <string name="unmute_sound">unMute sound</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="album">Albums</string>

</resources>